deimos/zmq/zmq.d


struct zmq_pollitem_t
{
    void* socket;
    version (win32)
    {
        SOCKET fd;
    }
    else
    {
        int fd;
    }
    short events;
    short revents;
}

enum ZMQ_POLLITEMS_DFLT = 16;

int zmq_poll(zmq_pollitem_t* items, int nitems, c_long timeout);

/******************************************************************************/
/*  Message proxying                                                          */
/******************************************************************************/

int zmq_proxy(void* frontend, void* backend, void* capture);
int zmq_proxy_steerable (void *frontend, void *backend, void *capture, void *control);

/******************************************************************************/
/*  Probe library capabilities                                                */
/******************************************************************************/

enum ZMQ_HAS_CAPABILITIES = 1;
int zmq_has(const(char)* capability);

/*  Deprecated aliases */
enum
{
    ZMQ_STREAMER     = 1,
    ZMQ_FORWARDER    = 2,
    ZMQ_QUEUE        = 3
}

/*  Deprecated methods */
int zmq_device(int type, void* frontend, void* backend);
int zmq_sendmsg(void* s, zmq_msg_t* msg, int flags);
int zmq_recvmsg(void* s, zmq_msg_t* msg, int flags);


/******************************************************************************/
/*  Encryption functions                                                      */
/******************************************************************************/

/*  Encode data with Z85 encoding. Returns encoded data                       */
char* zmq_z85_encode(char* dest, ubyte* data, size_t size);

/*  Decode data with Z85 encoding. Returns decoded data                       */
ubyte* zmq_z85_decode(ubyte* dest, char* string_);

/*  Generate z85-encoded public and private keypair with libsodium.           */
/*  Returns 0 on success.                                                     */
int zmq_curve_keypair(char* z85_public_key, char* z85_secret_key);


/******************************************************************************/
/*  These functions are not documented by man pages -- use at your own risk.  */
/*  If you need these to be part of the formal ZMQ API, then (a) write a man  */
/*  page, and (b) write a test case in tests.                                 */
/******************************************************************************/

struct iovec;

int zmq_sendiov(void* s, iovec* iov, size_t count, int flags);
int zmq_recviov(void* s, iovec* iov, size_t* count, int flags);

/*  Helper functions are used by perf tests so that they don't have to care   */
/*  about minutiae of time-related functions on different OS platforms.       */

/*  Starts the stopwatch. Returns the handle to the watch.                    */
void* zmq_stopwatch_start();

/*  Stops the stopwatch. Returns the number of microseconds elapsed since     */
/*  the stopwatch was started.                                                */
c_ulong zmq_stopwatch_stop(void* watch_);

/*  Sleeps for specified number of seconds.                                   */
void zmq_sleep(int seconds_);

/* Start a thread. Returns a handle to the thread.                            */
void* zmq_threadstart(void function(void*) nothrow func, void* arg);

/* Wait for thread to complete then free up resources.                        */
void zmq_threadclose(void* thread);


}// extern (C)
